--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 This particular piece of code is, currently, absolutely horrible. It also doesn't obey the specification given in the problem. If you use it, you're an idiot.
+
+build with: g++ -Wall save_endo.cpp
+
+Requires endo dna to be in the same directory, or will segfault
