working compile checkpoint - dna_string implementation now fairly complete

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-This particular piece of code is, currently, absolutely horrible. It also doesn't obey the specification given in the problem. If you use it, you're an idiot.
+This particular piece of code is, currently, fairly horrible. It also doesn't obey the specification given in the problem precisely - it does get pretty near though.
 
-build with: g++ -Wall save_endo.cpp
+build with: g++ -Wall -I/path/to/boost -g *.cpp
 
 Requires endo dna to be in the same directory, or will segfault
